--- a/108590005_HW6_2/app/src/main/res/layout/activity_main.xml
+++ b/108590005_HW6_2/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.droidcafe.MainActivity">
+    tools:context="com.example.android.droidcafeoptions.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
