--- a/108590005_HW6_2/app/src/main/res/layout/content_main.xml
+++ b/108590005_HW6_2/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.android.droidcafe.MainActivity"
+    tools:context="com.example.android.droidcafeoptions.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
@@ -111,16 +111,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/froyo"
         app:layout_constraintTop_toTopOf="@+id/froyo" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        android:onClick="chooseDate"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/froyo" />
 
 </android.support.constraint.ConstraintLayout>
