--- a/108590005_HW6_2/app/src/main/res/menu/menu_main.xml
+++ b/108590005_HW6_2/app/src/main/res/menu/menu_main.xml
@@ -17,31 +17,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.droidcafe.MainActivity">
+    tools:context="com.example.android.droidcafeoptions.MainActivity">
     <item
         android:id="@+id/action_contact"
         android:orderInCategory="100"
         android:title="@string/action_contact"
         app:showAsAction="never" />
-
     <item
         android:id="@+id/action_order"
+        android:icon="@drawable/ic_shopping_cart"
         android:orderInCategory="10"
         android:title="@string/action_order"
-        android:icon="@drawable/ic_shopping_cart"
         app:showAsAction="always" />
-
     <item
         android:id="@+id/action_status"
+        android:icon="@drawable/ic_status_info"
         android:orderInCategory="20"
         android:title="@string/action_status"
-        android:icon="@drawable/ic_status_info"
         app:showAsAction="always" />
-
     <item
         android:id="@+id/action_favorites"
+        android:icon="@drawable/ic_favorite"
         android:orderInCategory="30"
         android:title="@string/action_favorites"
-        android:icon="@drawable/ic_favorite_star"
         app:showAsAction="ifRoom" />
 </menu>
