--- a/108590005_HW8_2/app/src/main/res/layout/activity_detail.xml
+++ b/108590005_HW8_2/app/src/main/res/layout/activity_detail.xml
@@ -15,10 +15,11 @@
   limitations under the License.
   -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context="com.example.android.materialme.DetailActivity">
@@ -26,7 +27,7 @@
         <ImageView
             android:id="@+id/sportsImageDetail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="137dp"
             android:adjustViewBounds="true" />
 
         <TextView
